# self-cert-bot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake-single-platform.yml
include/self-cert-bot/: Client.h  Server.h  cert_utils.h  protocol_utils.hpp  utils.h
src/: main.cpp
src/client/: Client.cpp
src/server/: Server.cpp  cert_utils.cpp
src/utils/: cert_utils.cpp  utils.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/utils/: test_cert_utils.cpp  test_utils.cpp
